--- a/requirements.txt
+++ b/requirements.txt
@@ -1,243 +1,31 @@
-alembic==1.3.1
-apache-airflow==1.10.6
-apispec==3.1.0
-apt-clone==0.2.1
-apturl==0.5.2
-argcomplete==1.10.2
-asn1crypto==0.24.0
-attrs==19.3.0
-awscli==1.16.89
-Babel==2.7.0
-backcall==0.1.0
-bcrypt==3.1.7
-bleach==3.0.2
-blinker==1.4
 blis==0.4.1
-botocore==1.12.79
-Brlapi==0.6.6
-cached-property==1.5.1
-cachetools==4.0.0
 catalogue==1.0.0
 certifi==2020.4.5.1
-cffi==1.13.2
 chardet==3.0.4
-checkbox-support==0.22
-Click==7.0
-colorama==0.4.1
-colorlog==4.0.2
-command-not-found==0.3
-configparser==3.5.3
-croniter==0.3.30
-cryptography==2.8
-cupshelpers==1.0
-cycler==0.10.0
+click==7.1.2
 cymem==2.0.3
-decorator==4.3.0
-defer==1.0.6
-defusedxml==0.6.0
-dell-recovery==0.0.0
-dill==0.3.1.1
-distro==1.0.1
-distro-info===0.18ubuntu0.18.04.1
-docker==4.1.0
-docker-compose==1.25.3
-dockerpty==0.4.1
-docopt==0.6.2
-docutils==0.15.2
 en-core-web-sm==2.2.5
-entrypoints==0.2.3
-evdev==0.7.0
-feedparser==5.2.1
-Flask==1.1.1
-Flask-Admin==1.5.3
-Flask-AppBuilder==1.13.1
-Flask-Babel==0.12.2
-Flask-Caching==1.3.3
-Flask-JWT-Extended==3.24.1
-Flask-Login==0.4.1
-Flask-OpenID==1.2.5
-Flask-SQLAlchemy==2.4.1
-flask-swagger==0.2.13
-Flask-WTF==0.14.2
-funcsigs==1.0.0
-future==0.16.0
-gender-guesser==0.4.0
-graphviz==0.13.2
-grpcio==1.26.0
-guacamole==0.9.2
-gunicorn==20.0.4
-html5lib==0.999999999
-httplib2==0.9.2
+Flask==1.1.2
 idna==2.9
 importlib-metadata==1.6.0
-ipykernel==5.1.0
-ipython==7.1.1
-ipython-genutils==0.2.0
-ipywidgets==7.4.2
-iso8601==0.1.12
 itsdangerous==1.1.0
-jedi==0.13.1
-Jinja2==2.10.3
-jmespath==0.9.3
-json-merge-patch==0.2
-jsonschema==3.2.0
-jupyter==1.0.0
-jupyter-client==5.2.3
-jupyter-console==6.0.0
-jupyter-core==4.4.0
-keyring==10.6.0
-keyrings.alt==3.0
-kiwisolver==1.0.1
-language-selector==0.1
-launchpadlib==1.10.6
-lazr.restfulclient==0.13.5
-lazr.uri==1.0.3
-lazy-object-proxy==1.4.3
-lockfile==0.12.2
-louis==3.5.0
-lxml==4.2.1
-macaroonbakery==1.1.3
-Mako==1.1.0
-Markdown==2.6.11
+Jinja2==2.11.2
 MarkupSafe==1.1.1
-marshmallow==3.2.2
-marshmallow-enum==1.5.1
-marshmallow-sqlalchemy==0.18.0
-matplotlib==3.0.1
-mistune==0.8.4
-more-itertools==7.2.0
 murmurhash==1.0.2
-mysqlclient==1.4.5
-nbconvert==5.4.0
-nbformat==4.4.0
-netifaces==0.10.4
-notebook==5.7.0
 numpy==1.18.4
-olefile==0.45.1
-onboard==1.4.1
-ordereddict==1.1
-padme==1.1.1
-PAM==0.4.2
-pandas==0.25.3
-pandocfilters==1.4.2
-paramiko==2.7.1
-parso==0.3.1
-pbr==5.4.3
-pendulum==1.4.4
-pexpect==4.6.0
-pickleshare==0.7.5
-Pillow==5.1.0
+pandas==1.0.3
+pkg-resources==0.0.0
 plac==1.1.3
-plainbox==0.25
 preshed==3.0.2
-prison==0.1.0
-progressbar==2.3
-prometheus-client==0.4.2
-prompt-toolkit==2.0.7
-protobuf==3.11.2
-psutil==5.6.5
-psycopg2==2.7.6.1
-ptyprocess==0.6.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycairo==1.16.2
-pycparser==2.19
-pycrypto==2.6.1
-pycups==1.9.73
-pycurl==7.43.0.1
-Pygments==2.4.2
-pygobject==3.26.1
-PyICU==1.9.8
-PyJWT==1.7.1
-pymacaroons==0.13.0
-PyMySQL==0.9.2
-PyNaCl==1.3.0
-pyparsing==2.3.0
-pyRFC3339==1.0
-pyrsistent==0.15.7
-pyte==0.8.0
-python-apt==1.6.5+ubuntu0.2
-python-daemon==2.1.2
 python-dateutil==2.8.1
-python-debian==0.1.32
-python-editor==1.0.4
-python3-openid==3.1.0
-pytz==2019.3
-pytzdata==2019.3
-pyxdg==0.25
-PyYAML==5.3
-pyzmq==17.1.2
-qtconsole==4.4.2
-reportlab==3.4.0
+pytz==2020.1
 requests==2.23.0
-requests-oauthlib==1.3.0
-requests-unixsocket==0.1.5
-rsa==4.0
-s3transfer==0.1.13
-scipy==1.1.0
-scour==0.36
-seaborn==0.9.0
-SecretStorage==2.3.1
-Send2Trash==1.5.0
-setproctitle==1.1.10
-simplegeneric==0.8.1
-simplejson==3.13.2
 six==1.14.0
-skorch==0.4.0
 spacy==2.2.4
 srsly==1.0.2
-sshtunnel==0.1.4
-stevedore==1.31.0
-system-service==0.3
-systemd-python==234
-tabulate==0.8.6
-tenacity==4.12.0
-termcolor==1.1.0
-terminado==0.8.1
-testpath==0.4.2
-text-unidecode==1.2
-texttable==1.6.2
-thefuck==3.29
 thinc==7.4.0
-thrift==0.13.0
-torch==0.4.1
-tornado==5.1.1
 tqdm==4.46.0
-traitlets==4.3.2
-tzlocal==1.5.1
-ubuntu-drivers-common==0.0.0
-ufw==0.36
-unattended-upgrades==0.1
-unicodecsv==0.14.1
-unity-scope-calculator==0.1
-unity-scope-chromiumbookmarks==0.1
-unity-scope-colourlovers==0.1
-unity-scope-devhelp==0.1
-unity-scope-gdrive==0.7
-unity-scope-manpages==0.1
-unity-scope-openclipart==0.1
-unity-scope-texdoc==0.1
-unity-scope-tomboy==0.1
-unity-scope-virtualbox==0.1
-unity-scope-yelp==0.1
-unity-scope-zotero==0.1
 urllib3==1.25.9
-usb-creator==0.3.3
-virtualenv==16.7.7
-virtualenv-clone==0.5.3
-virtualenvwrapper==4.8.4
-wadllib==1.3.2
 wasabi==0.6.0
-wcwidth==0.1.7
-webencodings==0.5.1
-websocket-client==0.57.0
-Werkzeug==0.16.0
-widgetsnbextension==3.4.2
-WTForms==2.2.1
-xdiagnose==3.8.8
-xkit==0.0.0
-xlrd==1.2.0
-XlsxWriter==0.9.6
+Werkzeug==1.0.1
 zipp==3.1.0
-zope.deprecation==4.4.0
-zope.interface==4.3.2
