--- a/client/named-entity-recognition/package.json
+++ b/client/named-entity-recognition/package.json
@@ -11,6 +11,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-scripts": "3.4.1",
+    "react-wordcloud": "^1.2.3",
     "reactstrap": "^8.4.1"
   },
   "scripts": {
